--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Header with image and a describing title and subtitle 
          Using Span to mark the subtitle -->
     <header>
-      <img id="me" src="/img/IMG_5705.jpeg" alt="My image" />
+      <img id="me" src="./img/IMG_5705.jpeg" alt="My image" />
       <h1>
         Hi there! My name is Lolita Tochiieva. <br />
         <span id="headerP"
