--- a/index.html
+++ b/index.html
@@ -4,30 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <script
+      src="https://kit.fontawesome.com/8f394db7cf.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Link to stylesheet -->
     <link rel="stylesheet" href="./style.css" />
     <title>Portfolio Lolka</title>
   </head>
   <body>
     <!-- Navigation bar with Logo and Links -->
-    <nav>
-      <a id="logoName" title="Lolita Tochiieva">Lolita Tochiieva</a>
+    <nav class="desktopNav">
+      <a href="index.html">
+        <img
+          id="Lolita_Tochiieva_Logo"
+          src="img/Lolkas Logo.png"
+          alt="MyLogo"
+        />
+      </a>
       <div class="rightNav">
-        <a href="#education">My education</a>
-        <a href="#experience">My experience</a>
-        <a href="#skills">My skills</a>
-        <a href="#projects">My projects</a>
+        <a id="my_ux_projects" href="UXprojects.html">My UX projects</a>
+        <a id="my_side_projects" href="SideProjects.html">My side projects</a>
+        <a id="about_me" href="AboutMe.html">About me</a>
       </div>
     </nav>
-    <br />
-    <br />
+
+    <!-- Phone Navigation bar-->
+    <nav class="phoneNav">
+      <div class="logo_phone">
+        <a href="index.html">
+          <img
+            id="Lolita_Tochiieva_Logo"
+            src="img/Lolkas Logo.png"
+            alt="MyLogo"
+          />
+        </a>
+      </div>
+      <div class="mobile_links">
+        <a href="UXprojects.html">My UX projects</a>
+        <a href="SideProjects.html">My side projects</a>
+        <a href="AboutMe.html">About me</a>
+      </div>
+      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">Menu</a>
+    </nav>
     <!-- Header with image and a describing title and subtitle 
          Using Span to mark the subtitle -->
     <header>
-      <img id="me" src="./img/IMG_5705.jpeg" alt="My image" />
+      <img id="me" src="./img/LolkaTape.png" alt="My image" />
       <h1>
-        Hi there! My name is Lolita Tochiieva. <br />
+        Hi there! My name is <span class="orangeName"> Lolita Tochiieva</span>.
+        <br />
         <span id="headerP"
           >I am a current UX-design student at Chas Academy in Stockholm,
           Sweden. I am very passionate about what I do and I look forward to
@@ -36,79 +62,80 @@
       </h1>
     </header>
 
-    <!-- BR gives space needed which turned out better than using css -->
-    <br />
-    <br />
-
-    <!-- Main Section with 4 different articles containing headers and paragraphs -->
+    <!-- Main Section-->
     <main>
-      <article id="education">
-        <h1>My education</h1>
-        <br />
-        <p>
-          Odessa Gymnasium #9 2009-2014, Odessa, Ukraine <br />
-          Odessa National Medical University, Pharmaceutical 2014 - 2020,
-          Odessa, Ukraine <br />
-          SFI, SVA Grund 1-4, SVA 1-3 2018-2020, Växjö, Sweden <br />
-          Linnéuniversitet, Foto/Digital Bildredigering 15hp 2020 Sep - 2021
-          Jan, Växjö, Sweden <br />
-          Chas Academy, UX-Designer med kravkompetens 2021-Present, Stockholm,
-          Sweden <br />
-          Udemy, Learn Figma - UI/UX Design Essential Training 2021 Oct - 2021
-          Oct, Online <br />
-          Udemy, User Experience Design Essentials - Adobe XD 2022-Present
-        </p>
-        <!-- BR gives space needed which turned out better than using css -->
-        <br />
-      </article>
+      <!-- Div classes to have text over image -->
+      <div class="Choises">
+        <div class="UXNav">
+          <a href="UXprojects.html">
+            <img id="LolkasUX" src="./img/Photo+vector.png" alt="My UX" />
+          </a>
+          <a href="UXprojects.html">
+            <div class="ux_projects">My ux projects</div>
+          </a>
+        </div>
+        <div class="SideNav">
+          <a href="SideProjects.html">
+            <img
+              id="LolkasSide"
+              src="./img/MySideProjPhoto+vector.png"
+              alt="Side projects"
+            />
+          </a>
+          <a href="SideProjects.html">
+            <div class="LolkasSideProjects">My side projects</div>
+          </a>
+        </div>
+        <div class="AboutNav">
+          <a href="AboutMe.html">
+            <img
+              id="AboutLolka"
+              src="./img/AboutMePhoto+vector.png"
+              alt="About me"
+            />
+          </a>
+          <a href="AboutMe.html">
+            <div class="LolkasAboutMe">About me</div>
+          </a>
+        </div>
+      </div>
 
-      <article id="experience">
-        <h1>My experience</h1>
-        <!-- BR gives space needed which turned out better than using css -->
-        <br />
-        <p>
-          Winter 2014, consultant in clothingstore. <br />
-          ISKO AB / Janitor 2015-2021, Stockholm. Provided companies with
-          consumables and was responsible for their premises were spotlessly
-          fresh. <br />
-          ISKO AB / Contractstarter 2021 - 2022, Stockholm Helped start new
-          contracts by acting as a point of contact both for the janitor and the
-          customer. Also made sure that materials that the janitor needs is
-          there, and in case of lack arranged with order.
-        </p>
-        <!-- BR gives space needed which turned out better than using css -->
-        <br />
-      </article>
-
-      <article id="skills">
-        <h1>My skills</h1>
-        <!-- BR gives space needed which turned out better than using css -->
-        <br />
-        <p>
-          Fluent in English, both spoken and written. <br />
-          Fluent in Russian and Ukrainian, both spoken and written. <br />
-          Proficient in Swedish, both spoken and written. <br />
-          Foundational knowledge in HTML, CSS <br />
-          Foundational knowledge in Adobe Photoshop <br />
-          Foundational knowledge in FIGMA <br />
-          Foundational knowledge in GIT
-        </p>
-        <!-- BR gives space needed which turned out better than using css -->
-        <br />
-      </article>
-
-      <article id="projects">
-        <h1>My projects</h1>
-        <!-- BR gives space needed which turned out better than using css -->
-        <br />
-        <p>Coming Soon!</p>
+      <!-- Social media Icons, linking to generic website -->
+      <article class="social_media">
+        <h1>Find me on:</h1>
+        <div class="icons">
+          <div class="gmail">
+            <a href="mailto:lolita.tochiieva@chasacademy.se">
+              <img src="img/gmail.png" alt="" />
+            </a>
+          </div>
+          <div class="fb">
+            <a href="facebook.com">
+              <img src="img/fb.png" alt="" />
+            </a>
+          </div>
+          <div class="git">
+            <a href="github.com">
+              <img src="img/git.png" alt="" />
+            </a>
+          </div>
+          <div class="linkedin">
+            <a href="linkedin.com">
+              <img src="img/linked.png" alt="" />
+            </a>
+          </div>
+          <div class="ig">
+            <a href="instagram.com">
+              <img src="img/ig.png" alt="" />
+            </a>
+          </div>
+        </div>
       </article>
     </main>
-
-    <!-- Simple footer in the bottom with name and email link -->
     <footer>
       Lolita Tochiieva E-Portfolio &copy;
       <a href="mailto:lolita.tochiieva@chasacademy.se">Email</a>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
