--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>About Me</title>
   </head>
   <body>
@@ -39,7 +40,9 @@
         <a href="SideProjects.html">My side projects</a>
         <a href="AboutMe.html">About me</a>
       </div>
-      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">Menu</a>
+      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">
+        <i class="fa fa-bars"></i>
+      </a>
     </nav>
 
     <!-- Header -->
@@ -49,7 +52,7 @@
       <!-- Div classes to have text over image -->
       <div class="infoContainer">
         <img id="infoPic" src="img/OrangePaper.png" alt="Orange note" />
-        <div class="centerText">
+        <p class="centerText">
           I was born in Odessa, Ukraine, where after high-school, I finished 6
           years long pharmaceutical program in medical university. While
           studying in the university I understood that it isn't my future. I
@@ -58,7 +61,7 @@
           environment and try to find a new ME. Sweden showed me a possibility
           and potential of creativity and I finally discovered UX design. From
           that point my journey has began.
-        </div>
+        </p>
       </div>
     </header>
 
