--- a/SideProjects.html
+++ b/SideProjects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Lolkas side projects</title>
   </head>
   <body>
@@ -42,13 +43,15 @@
         <a href="SideProjects.html">My side projects</a>
         <a href="AboutMe.html">About me</a>
       </div>
-      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">Menu</a>
+      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">
+        <i class="fa fa-bars"></i>
+      </a>
     </nav>
 
     <header>
       <img
         id="Side_Vector"
-        src="img/MySideProjPhoto+vector.png"
+        src="img/MySideProjPhoto+vectorPage.svg"
         alt="SideProjectIllustration"
       />
       <div class="InfoContainerSide">
