--- a/UXprojects.html
+++ b/UXprojects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Lolkas UX projects</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
         </div>
       </nav>
 
-          <!-- Phone Navigation bar-->
+    <!-- Phone Navigation bar-->
     <nav class="phoneNav">
       <div class="logo_phone">
         <a href="index.html">
@@ -37,13 +38,15 @@
         <a href="SideProjects.html">My side projects</a>
         <a href="AboutMe.html">About me</a>
       </div>
-      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">Menu</a>
+      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">
+        <i class="fa fa-bars"></i>
+      </a>
     </nav>
 
     <!-- Header -->
 
   <header class="ux_projects_page_header">
-    <img id="Designer_And_Vector" src="./img/Designer+vectorOnPage.png" alt="DesignerIllustration">
+    <img id="Designer_And_Vector" src="./img/Designer+vectorOnPage.svg" alt="DesignerIllustration">
       <div class="InfoContainerUX">
         <img id="UX_Note" src="./img/NoteUXproj.png" alt="AboutUXprojectsPage">
           <div class="UXText">
@@ -55,16 +58,15 @@
   <!-- Main Section -->
   <main>
     <article>
-      
       <!-- Div classes to have text over image -->
       <div class="HandlaSmartChoise">
         <a href="HandlaSmart.html">
-          <img id="HandlaSmartLogo" src="img/HANDLA SMART.png" alt="Handla Smart">
+          <img id="HandlaSmartLogo" src="img/HANDLA SMART.svg" alt="Handla Smart">
         </a>
       </div>
       <div class="MyScheduleChoise">
         <a href="MySchedule.html">
-        <img id="MyScheduleLogo" src="img/My schedule.png" alt="My schedule">
+        <img id="MyScheduleLogo" src="img/My schedule.svg" alt="My schedule">
       </a>
       </div>
     </article>
