--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/8f394db7cf.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Link to stylesheet -->
     <link rel="stylesheet" href="./style.css" />
     <title>Portfolio Lolka</title>
@@ -45,7 +42,9 @@
         <a href="SideProjects.html">My side projects</a>
         <a href="AboutMe.html">About me</a>
       </div>
-      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">Menu</a>
+      <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">
+        <i class="fa fa-bars"></i>
+      </a>
     </nav>
     <!-- Header with image and a describing title and subtitle 
          Using Span to mark the subtitle -->
@@ -68,34 +67,25 @@
       <div class="Choises">
         <div class="UXNav">
           <a href="UXprojects.html">
-            <img id="LolkasUX" src="./img/Photo+vector.png" alt="My UX" />
-          </a>
-          <a href="UXprojects.html">
-            <div class="ux_projects">My ux projects</div>
+            <img id="LolkasUX" src="./img/Photo+vector.svg" alt="My UX" />
           </a>
         </div>
         <div class="SideNav">
           <a href="SideProjects.html">
             <img
               id="LolkasSide"
-              src="./img/MySideProjPhoto+vector.png"
+              src="./img/MySideProjPhoto+vector.svg"
               alt="Side projects"
             />
-          </a>
-          <a href="SideProjects.html">
-            <div class="LolkasSideProjects">My side projects</div>
           </a>
         </div>
         <div class="AboutNav">
           <a href="AboutMe.html">
             <img
               id="AboutLolka"
-              src="./img/AboutMePhoto+vector.png"
+              src="./img/AboutMePhoto+vector.svg"
               alt="About me"
             />
-          </a>
-          <a href="AboutMe.html">
-            <div class="LolkasAboutMe">About me</div>
           </a>
         </div>
       </div>
@@ -110,22 +100,22 @@
             </a>
           </div>
           <div class="fb">
-            <a href="facebook.com">
+            <a href="https://www.facebook.com">
               <img src="img/fb.png" alt="" />
             </a>
           </div>
           <div class="git">
-            <a href="github.com">
+            <a href="https://www.github.com">
               <img src="img/git.png" alt="" />
             </a>
           </div>
           <div class="linkedin">
-            <a href="linkedin.com">
+            <a href="https://www.linkedin.com">
               <img src="img/linked.png" alt="" />
             </a>
           </div>
           <div class="ig">
-            <a href="instagram.com">
+            <a href="https://www.instagram.com">
               <img src="img/ig.png" alt="" />
             </a>
           </div>
