changed to png, figma illustrations bad in SVG

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <!-- Fontawesome icon CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>About Me</title>
   </head>
@@ -18,6 +19,7 @@
           alt="MyLogo"
         />
       </a>
+      <!-- Grouped right nav to easier style-->
       <div class="rightNav">
         <a id="my_ux_projects" href="UXprojects.html">My UX projects</a>
         <a id="my_side_projects" href="SideProjects.html">My side projects</a>
@@ -35,11 +37,13 @@
           />
         </a>
       </div>
+      <!-- Mobile Links, toggleable through Javascript on phone browser -->
       <div class="mobile_links">
         <a href="UXprojects.html">My UX projects</a>
         <a href="SideProjects.html">My side projects</a>
         <a href="AboutMe.html">About me</a>
       </div>
+      <!-- Fontawesome burger menu icon to not take so much space on phone navbar-->
       <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">
         <i class="fa fa-bars"></i>
       </a>
@@ -49,7 +53,8 @@
     <header>
       <img id="me" src="./img/LolkaTape.png" alt="My image" />
 
-      <!-- Div classes to have text over image -->
+      <!-- Div classes to have text over image due to requirements of "webbriktlinier" 
+        to have text seperately from image so screen reader can read the text -->
       <div class="infoContainer">
         <img id="infoPic" src="img/OrangePaper.png" alt="Orange note" />
         <p class="centerText">
