--- a/SideProjects.html
+++ b/SideProjects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <!-- Fontawesome icon CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Lolkas side projects</title>
   </head>
@@ -18,6 +19,7 @@
           alt="MyLogo"
         />
       </a>
+      <!-- Grouped right nav to easier style-->
       <div class="rightNav">
         <a id="my_ux_projects" href="UXprojects.html">My UX projects</a>
         <a id="my_side_projects_highlight" href="SideProjects.html"
@@ -38,11 +40,13 @@
           />
         </a>
       </div>
+      <!-- Mobile Links, toggleable through Javascript on phone browser -->
       <div class="mobile_links">
         <a href="UXprojects.html">My UX projects</a>
         <a href="SideProjects.html">My side projects</a>
         <a href="AboutMe.html">About me</a>
       </div>
+      <!-- Fontawesome burger menu icon to not take so much space on phone navbar-->
       <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">
         <i class="fa fa-bars"></i>
       </a>
@@ -51,9 +55,12 @@
     <header>
       <img
         id="Side_Vector"
-        src="img/MySideProjPhoto+vectorPage.svg"
+        src="img/MySideProjPhoto+vectorPage.png"
         alt="SideProjectIllustration"
       />
+
+      <!-- Div classes to have text over image due to requirements of "webbriktlinier" 
+        to have text seperately from image so screen reader can read the text -->
       <div class="InfoContainerSide">
         <img id="Side_Note" src="img/NoteSideproj.png" alt="SideProjectNote" />
         <div class="SideText">
