--- a/UXprojects.html
+++ b/UXprojects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
+    <!-- Fontawesome icon CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Lolkas UX projects</title>
 </head>
@@ -15,6 +16,7 @@
       <a href="index.html">
         <img id="Lolita_Tochiieva_Logo" src="img/Lolkas Logo.png" alt="MyLogo">
       </a>
+      <!-- Grouped right nav to easier style-->
         <div class="rightNav">
           <a id="my_ux_projects_highlight" href="UXprojects.html">My UX projects</a>
           <a id="my_side_projects" href="SideProjects.html">My side projects</a>
@@ -33,11 +35,13 @@
           />
         </a>
       </div>
+      <!-- Mobile Links, toggleable through Javascript on phone browser -->
       <div class="mobile_links">
         <a href="UXprojects.html">My UX projects</a>
         <a href="SideProjects.html">My side projects</a>
         <a href="AboutMe.html">About me</a>
       </div>
+      <!-- Fontawesome burger menu icon to not take so much space on phone navbar-->
       <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">
         <i class="fa fa-bars"></i>
       </a>
@@ -46,7 +50,10 @@
     <!-- Header -->
 
   <header class="ux_projects_page_header">
-    <img id="Designer_And_Vector" src="./img/Designer+vectorOnPage.svg" alt="DesignerIllustration">
+    <img id="Designer_And_Vector" src="./img/Designer+vectorOnPage.png" alt="DesignerIllustration">
+
+    <!-- Div classes to have text over image due to requirements of "webbriktlinier" 
+        to have text seperately from image so screen reader can read the text -->
       <div class="InfoContainerUX">
         <img id="UX_Note" src="./img/NoteUXproj.png" alt="AboutUXprojectsPage">
           <div class="UXText">
@@ -61,12 +68,12 @@
       <!-- Div classes to have text over image -->
       <div class="HandlaSmartChoise">
         <a href="HandlaSmart.html">
-          <img id="HandlaSmartLogo" src="img/HANDLA SMART.svg" alt="Handla Smart">
+          <img id="HandlaSmartLogo" src="img/HANDLA SMART.png" alt="Handla Smart">
         </a>
       </div>
       <div class="MyScheduleChoise">
         <a href="MySchedule.html">
-        <img id="MyScheduleLogo" src="img/My schedule.svg" alt="My schedule">
+        <img id="MyScheduleLogo" src="img/My schedule.png" alt="My schedule">
       </a>
       </div>
     </article>
