--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Link to stylesheet -->
+
+    <!-- Fontawesome icon CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- Link to stylesheet-->
     <link rel="stylesheet" href="./style.css" />
     <title>Portfolio Lolka</title>
   </head>
@@ -19,6 +24,8 @@
           alt="MyLogo"
         />
       </a>
+
+      <!-- Grouped right nav to easier style-->
       <div class="rightNav">
         <a id="my_ux_projects" href="UXprojects.html">My UX projects</a>
         <a id="my_side_projects" href="SideProjects.html">My side projects</a>
@@ -37,11 +44,14 @@
           />
         </a>
       </div>
+
+      <!-- Mobile Links, toggleable through Javascript on phone browser -->
       <div class="mobile_links">
         <a href="UXprojects.html">My UX projects</a>
         <a href="SideProjects.html">My side projects</a>
         <a href="AboutMe.html">About me</a>
       </div>
+      <!-- Fontawesome burger menu icon to not take so much space on phone navbar-->
       <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">
         <i class="fa fa-bars"></i>
       </a>
@@ -63,18 +73,18 @@
 
     <!-- Main Section-->
     <main>
-      <!-- Div classes to have text over image -->
+      
       <div class="Choises">
         <div class="UXNav">
           <a href="UXprojects.html">
-            <img id="LolkasUX" src="./img/Photo+vector.svg" alt="My UX" />
+            <img id="LolkasUX" src="./img/Photo+vector.png" alt="My UX" />
           </a>
         </div>
         <div class="SideNav">
           <a href="SideProjects.html">
             <img
               id="LolkasSide"
-              src="./img/MySideProjPhoto+vector.svg"
+              src="./img/MySideProjPhoto+vector.png"
               alt="Side projects"
             />
           </a>
@@ -83,7 +93,7 @@
           <a href="AboutMe.html">
             <img
               id="AboutLolka"
-              src="./img/AboutMePhoto+vector.svg"
+              src="./img/AboutMePhoto+vector.png"
               alt="About me"
             />
           </a>
