--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </a>
           </div>
           <div class="linkedin">
-            <a href="https://www.linkedin.com">
+            <a href="https://www.linkedin.com/in/lolita-tochiieva-649312226/">
               <img src="img/linked.png" alt="" />
             </a>
           </div>
