--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
         <h1>Find me on:</h1>
         <div class="icons">
           <div class="gmail">
-            <a href="mailto:lolita.tochiieva@chasacademy.se">
+            <a href="mailto:alol5569@gmail.com">
               <img src="img/gmail.png" alt="" />
             </a>
           </div>
           <div class="fb">
-            <a href="https://www.facebook.com">
+            <a href="hhttps://www.facebook.com/lola.daryushina/">
               <img src="img/fb.png" alt="" />
             </a>
           </div>
           <div class="git">
-            <a href="https://www.github.com">
+            <a href="https://github.com/Lolka69">
               <img src="img/git.png" alt="" />
             </a>
           </div>
@@ -125,7 +125,7 @@
             </a>
           </div>
           <div class="ig">
-            <a href="https://www.instagram.com">
+            <a href="https://www.instagram.com/lolaaaa_69/">
               <img src="img/ig.png" alt="" />
             </a>
           </div>
@@ -134,7 +134,7 @@
     </main>
     <footer>
       Lolita Tochiieva E-Portfolio &copy;
-      <a href="mailto:lolita.tochiieva@chasacademy.se">Email</a>
+      <a href="mailto:alol5569@gmail.com">Email</a>
     </footer>
     <script src="js/index.js"></script>
   </body>
