--- a/HandlaSmart.html
+++ b/HandlaSmart.html
@@ -47,7 +47,7 @@
     <br>
     <br>
     <main>
-      <h1>Coming Soon</h1>
+      <h1 class="soon">Coming Soon</h1>
     </main>
   </body>
 </html>
