--- a/SideProjects.html
+++ b/SideProjects.html
@@ -83,27 +83,27 @@
         <h1>Find me on:</h1>
         <div class="icons">
           <div class="gmail">
-            <a href="mailto:lolita.tochiieva@chasacademy.se">
+            <a href="mailto:alol5569@gmail.com">
               <img src="img/gmail.png" alt="" />
             </a>
           </div>
           <div class="fb">
-            <a href="facebook.com">
+            <a href="hhttps://www.facebook.com/lola.daryushina/">
               <img src="img/fb.png" alt="" />
             </a>
           </div>
           <div class="git">
-            <a href="github.com">
+            <a href="https://github.com/Lolka69">
               <img src="img/git.png" alt="" />
             </a>
           </div>
           <div class="linkedin">
-            <a href="linkedin.com">
+            <a href="https://www.linkedin.com/in/lolita-tochiieva-649312226/">
               <img src="img/linked.png" alt="" />
             </a>
           </div>
           <div class="ig">
-            <a href="instagram.com">
+            <a href="https://www.instagram.com/lolaaaa_69/">
               <img src="img/ig.png" alt="" />
             </a>
           </div>
@@ -111,7 +111,7 @@
       </article>
       <footer>
         Lolita Tochiieva E-Portfolio &copy;
-        <a href="mailto:lolita.tochiieva@chasacademy.se">Email</a>
+        <a href="mailto:alol5569@gmail.com">Email</a>
       </footer>
     </main>
     <script src="js/index.js"></script>
