--- a/SideProjects.html
+++ b/SideProjects.html
@@ -88,7 +88,7 @@
             </a>
           </div>
           <div class="fb">
-            <a href="hhttps://www.facebook.com/lola.daryushina/">
+            <a href="https://www.facebook.com/lola.daryushina/">
               <img src="img/fb.png" alt="" />
             </a>
           </div>
