--- a/MySchedule.html
+++ b/MySchedule.html
@@ -42,12 +42,39 @@
       </div>
       <a id="meny" href="javascript:void(0);" onclick="phoneMenu()">Menu</a>
     </nav>
-    <br>
-    <br>
-    <br>
-    <br>
+    <header id="my_schedule_header">
+      <img src="img/My_schedule.png" alt="">
+    </header>
     <main>
-      <h1>Coming Soon</h1>
+      <div class ="schedule_wrapper">
+        <div>
+          <h2>About project</h2>
+          <p>It is a very first and quiet small project that hypotheticly supposed to help users organise their tasks in one app. A user can mark each task by importancy, wether they are not done, in progress or done, put the alarm on particular tasks and even synchronyse tasks with phone alarm. The projects idea was to create an app that would look like a real notebook and help people with not only orginising but also visualising their to-do-lists. </p>
+        </div>
+        <div id="what_I_have_done">
+          <h2>What I have done</h2>
+          <ul>
+            <li>Brainstorming</li>
+            <li>Researching</li>
+            <li>Prototyping in Figma</li>
+          </ul>
+        </div>
+      </div>
+      <div class="twoimage">
+        <img src="img/2_preview.jpg" alt="">
+      </div>
+      <div class="threeimage">
+        <img src="img/3_preview.jpg" alt="">
+      </div>
+      <div class="conclusions2">
+        <h2 >My conclusions</h2>
+        <p>As it was my first try out of Figma in the beginning of the first semester, this project lacks a lot of work. From a deeper research to a better design. If I would develope the idea further, I would deffinately make it more accessible and a little bit less personaly designed. I also understand that my original idea of synchronising it with the phone alarm is very difficult to achive in real life. Although, I still like the idea of orginising the scheduale by visualising the tasks, so I am deffinatly going to continue working on this project in the future.  </p>
+      </div>
     </main>
+    <footer>
+      Lolita Tochiieva E-Portfolio &copy;
+      <a href="mailto:alol5569@gmail.com">Email</a>
+    </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
